# aoc-2024

./: .gitignore  README.md
aidan/: README.md
aidan/Day 1/: README.md  build.zig  build.zig.zon
aidan/Day 1/src/: main.zig
aidan/Day 2/: README.md  go.mod  main.go
aidan/Day 3/: README.md  main.exs
aidan/Day 4/: Package.swift
aidan/Day 4/Sources/: main.swift
aidan/Day 5/: day5.opam  dune-project
anari/: README.md
anari/Day 1/: main.cpp
gilli/: README.md
gilli/day-one/: Part1.py  Part2.py  README.md
noel/: README.md
noel/Day 1/: README.md  soln1.py  soln2.py
saeed/: README.md
saeed/Day 1/: P1.py  P2.py
saeed/Day 2/: P1.py  P2.py
saeed/Day 3/: P1.py  P2.py
saeed/Day 4/: P1.py  P2.py
zidane/: README.md
zidane/Day 1/: day1.py
zidane/Day1/: dayp2.py  tempCodeRunnerFile.py
