(lang dune 3.16)

(name day5)

(generate_opam_files true)

(source
 (github jeiang/aoc-2024))

(authors "Aidan Pinard")

(maintainers "Aidan Pinard")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name day5)
 (synopsis "Advent of Code Day 5 Solution")
 (description "Advent of Code Day 5 Solution")
 (depends ocaml dune core pps ppx_deriving)
 (tags
  ("advent of code" "advent of code 2024")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
